- Add error state if flickr feed is not responding properly - Cleanups

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,6 +3,7 @@ $black-3: #333333;
 $black-5: #555555;
 $white: #FFFFFF;
 $white-2: #DDDDDD;
+$red: #FF0000;
 
 $header-background: $black-3;
 $button-background: $black-5;
@@ -10,4 +11,5 @@ $button-background-hover: $black;
 $button-text: $white;
 $container-hover: $white-2;
 $search-icon: $white;
-$logo-color: $white;
+$logo-text: $white;
+$error-text: $red;
