--- a/src/containers/cards/style.scss
+++ b/src/containers/cards/style.scss
@@ -4,6 +4,9 @@
     justify-content: center;
     padding: 10px;
 }
+.error {
+    padding: 10px 0 0;
+}
 .cards {
     max-width: 1024px;
     margin: auto;
