--- a/src/components/card/style.scss
+++ b/src/components/card/style.scss
@@ -14,8 +14,21 @@
     }
     .thumbnail {
         height: 240px;
-        display: flex;
-        justify-content: center;
+        text-align: center;
+        position: relative;
+
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: auto;
+            height: auto;
+            margin: auto;
+            max-height: 100%;
+            max-width: 100%;
+        }
         .link {
             display: flex;
             height: 100%;
